Add username tracking to economy system: capture and update usernames in database during command execution; enhance user-related methods and improve data serialization/deserialization.
Took 41 minutes